[package]
name = "rust-weekly"
version = "0.1.0"
edition = "2018"
description = "Prints articles from rust-weekly blog"
authors = ["CrazyRoka <rokarostuk@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
termimad = "0.14"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
